# pre-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
vcpkg_precommit/: __init__.py  hook.py
