[metadata]
name = vcpkg-precommit-hook
version = attr: vcpkg_precommit.__version__
description = A pre-commit hook for validating vcpkg.json files
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthias Kuhn
author_email = matthias@opengis.ch
url = https://github.com/open-vcpkg/pre-commit
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.25.0

[options.entry_points]
console_scripts =
    vcpkg-format-manifest = vcpkg_precommit.hook:main
