[metadata]
name = vcpkg-precommit-hook
version = attr: vcpkg_precommit.__version__
description = A pre-commit hook for validating vcpkg.json files
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/vcpkg-precommit-hook
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.25.0

[options.entry_points]
console_scripts =
    vcpkg-format-manifest = vcpkg_precommit.hook:main
